--- a/descricao.html
+++ b/descricao.html
@@ -1,13 +1,92 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Avaliação de tendências de mudanças em escolas médicas</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="">
-	</head>
-	<body>
-		
-	</body>
+<html lang="pt-BR">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Avaliação de Tendências de Mudanças em Escolas Médicas</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+<main class="container apresentacao">
+
+	<header id="cabecalho">
+
+		<h1 class="marca">
+			<span class="n01">Avaliação de Tendências</span> 
+			<span class="n02">de mudanças em <strong>escolas médicas</strong></span>
+		</h1>
+
+
+		<a href="index.html" class="voltar botao" aria-label="voltar ao início"><span aria-hidden="true">← início</span></a>
+
+	</header>
+
+	<article>
+
+		<div class="principal">
+			
+			<div>
+				<h2>Apresentação do método</h2>
+				<p>Olá! Este é o instrumento de autoavaliação institucional denominado <strong>Método da Roda</strong> desenvolvido pela pesquisadora  Jadete Lampert a partir de sua tese de doutorado (Lampert,  2002). Por meio dele são avaliados cinco eixos conceituais  referentes ao ensino na área da saúde, com seus respectivos  desdobramentos: Mundo do Trabalho, Projeto Pedagógico,  Abordagem Pedagógica, Cenários de Prática e Desenvolvimento Docente.</p>
+				<p>O Método da Roda é utilizado pela Comissão de Avaliação de  Escolas da Área da Saúde (CAES) da Associação Brasileira de  Educação Médica (ABEM) para autoavaliação em cursos de  graduação da área da saúde (Lampert, 2009; Lampert, Costa &  Alves, 2016). Este instrumento revela o diagnóstico  quali-quantitativo institucional num determinado momento,  identiﬁcando a tipologia das escolas médicas em Tradicional, Inovadora ou Avançada frente ao que preconizam as Diretrizes  Curriculares Nacionais (DCN).</p>
+			</div>
+
+			<div>
+				<img src="assets/media/metodo-roda.svg" alt="">
+			</div>
+
+		</div>
+
+
+		<div class="necessidade">
+			<h2>Necessidade de avaliação</h2>
+			<p>A avaliação de cursos visa analisar e melhorar programas educacionais, e tem se tornado cada vez mais importante na área da saúde no Brasil, devido ao crescimento do número de instituições que formam profissionais e a responsabilidade que a instituição formadora tem frente às necessidades da sociedade (Bolela & Castro, 2014). </p>
+			<p>Desde a década de 1990, foi alavancado um processo de avaliação de escolas médicas com o movimento promovido pela Comissão Interinstitucional Nacional de Avaliação de Escolas Médicas (CINAEM) e, nos anos 2000, por meio da Comissão de Avaliação das Escolas Médicas (CAEM) – posteriormente renomeada como Comissão de Avaliação de Escolas da Área da Saúde (CAES), ambas vinculadas à Associação Brasileira de Educação Médica (ABEM) (Abdala, Stella, Perim, Aguilar, Lampert & Costa, 2009).</p>
+			<p>O estímulo dado por esses processos avaliativos culminou no desenvolvimento das Diretrizes Curriculares Nacionais (DCN) do curso de graduação em medicina publicadas em 2001 e reestruturadas em 2014 formalizando o direcionamento para a reforma  do ensino médico e assim, do ensino nas demais áreas da saúde (Brasil, 2014).</p>
+			<p>Em suma, as DCN apontam para uma formação generalista, humanista, crítica e reflexiva, contribuindo para a estruturação de um profissional capacitado a atuar, pautado em princípios éticos, promotor da saúde integral do ser humano.</p>
+			<p>Portanto, este processo de autoavaliação intenciona revelar as tendências de mudanças em escolas da área da saúde rumo a efetivação das DCN e, acima de tudo, é uma oportunidade coletiva para reflexões e tomada de decisões (Moreira & Pereira, 2012).</p>
+		</div>
+
+
+		<div class="criterios">
+			<h2>Critérios</h2>
+
+			<div class="inclusao">
+				<h3>Inclusão</h3>
+				<p>Para a realização desta autoavaliação o método preconiza que haja no mínimo 10 participantes (não há número máximo de participantes). Esses participantes devem ser representantes dos seguimentos discente, docente e técnico administrativo ligados ao processo de formação reunidos para este fim.</p>
+			</div>
+
+			<div class="exclusao">
+				<h3>Exclusão</h3>
+				<p>Não devem participar da autoavaliação discentes, docentes e técnico administrativos que não estiverem vinculados à instituição pesquisada ou que não estiverem reunidos no momento da realização da pesquisa.</p>
+			</div>
+		</div>
+
+	</article>
+	
+</main>
+
+
+
+
+
+
+<!-- nota -->
+<div class="modal" data-nota="1" aria-hidden="true" aria-label="Caixa de informação 1" aria-describedby="explicaNota" role="dialog">
+    <div role="document">
+    	<h2>Dra. Maria Goretti Queiroz</h2>
+    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore maxime est, eum facere laborum dolorum ea natus nisi dicta fuga veritatis autem itaque fugit, ullam vero ducimus, aliquam, recusandae iste?</p>
+
+    	<button class="fechar_nota" title="Fechar"><span aria-hidden="true">&times;</span></button>
+    </div>
+</div>
+
+<div id="explicaNota">Caixa de informação. Aperte ESC para sair ou clique no botão Fechar.</div>
+<div class="modalOverlay" tabindex="-1"></div>	
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="assets/js/loader.js"></script>	
+<script src="assets/js/app.js"></script>	
+</body>
 </html>
