--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<span class="n02">de mudanças em <strong>escolas médicas</strong></span>
 		</h1>
 
-		<button class="botao-grande">começar</button>
+		<button class="botao grande" onclick="location.href='descricao.html';">começar</button>
 
 		<a href="#ficha" class="ficha">Ficha técnica</a>
 	</section>
@@ -106,7 +106,7 @@
 			</dl>
 
 
-			<div class="catalografica">
+			<div class="catalografica escondido">
 		        <div class="titulo">Dados Internacionais de Catalogação na Publicação (CIP) GPT/BC/UFG</div>
 		        <div class="codigo">E24</div>
 		        <div class="dados">
@@ -121,13 +121,15 @@
 		        </div>
 			</div>
 
-			<p style="text-align: center; margin: 10px auto 0; font-size: .75em">Bibliotecária responsável: Amanda Cavalcante Perillo / CRB1: 2870</p>
+			<p class="escondido" style="text-align: center; margin: 10px auto 0; font-size: .75em">Bibliotecária responsável: Amanda Cavalcante Perillo / CRB1: 2870</p>
 
 
-			<p style="text-align: center; width: 100%"><button class="botao-grande">começar avaliação</button></p>
+			<p style="text-align: center; width: 100%"><button onclick="location.href='descricao.html';" class="botao grande">começar avaliação</button></p>
 
 		</article>
 	</section>
+
+
 
 
 <!-- nota -->
