--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<span class="n02">de mudanças em <strong>escolas médicas</strong></span>
 		</h1>
 
-		<button class="botao grande" onclick="location.href='descricao.html';">começar</button>
+		<button class="botao grande" onclick="location.href='apresentacao.html';">começar</button>
 
 		<a href="#ficha" class="ficha">Ficha técnica</a>
 	</section>
@@ -124,7 +124,7 @@
 			<p class="escondido" style="text-align: center; margin: 10px auto 0; font-size: .75em">Bibliotecária responsável: Amanda Cavalcante Perillo / CRB1: 2870</p>
 
 
-			<p style="text-align: center; width: 100%"><button onclick="location.href='descricao.html';" class="botao grande">começar avaliação</button></p>
+			<p style="text-align: center; width: 100%"><button onclick="location.href='apresentacao.html';" class="botao grande">começar avaliação</button></p>
 
 		</article>
 	</section>
