finalizacao pag de apresentacao

--- a/apresentacao.html
+++ b/apresentacao.html
@@ -63,11 +63,48 @@
 			</div>
 		</div>
 
+
+
+		<div class="processos">
+			<div>
+				<h2>Processo avaliativo</h2>
+
+				<p>A autoavaliação deverá ser realizada com todos os participantes presentes, preferencialmente em sala de aula da instituição, com cadeiras móveis para trabalhar em roda. A seguir serão apresentadas cada etapa da pesquisa:</p>
+
+				<ol>
+					<li><p>Inscrição dos <strong>dados institucionais</strong></p></li>
+					<li><p>Inscrição dos <strong>participantes da autoavaliação</strong></p></li>
+					<li>
+						<p><strong>Resposta às 17 perguntas</strong> da autoavaliação (no método elas correspondem aos vetores que compõem os 5 eixos conceituais), discussão e identificação das justificativas e evidências que levaram à alternativa escolhida.</p>
+						<div>
+							<p>Serão dadas 3 alternativas para resposta a cada pergunta: escolham aquela alternativa que for identificada como predominante no consenso do grupo. Também será dado espaço para redigir as justificativas e evidências que levaram à resposta escolhida. Relembrando:</p>
+							<p><strong>Justificativa:</strong> o “porquê” de a alternativa escolhida ser a predominante, identificando políticas, cultura institucional e/ou valores que, na percepção do grupo, justificam a prática predominante.</p>
+							<p><strong>Evidências:</strong> exemplos de situações que caracterizam mudanças – documentos, ações – passíveis de averiguação e constatação que confirmem a opção escolhida como predominante nas práticas da escola. </p>
+						</div>
+					</li>
+					<li><p><strong>Resultado quali-quantitativo da autoavaliação</strong>: será apresentado em figura de uma roda indicando se a escola possui tendência tradicional, inovadora com tendência tradicional, inovadora com tendência avançada ou avançada.</p></li>
+				</ol>
+			</div>
+
+			<div>
+				<h2>Resultados da Pesquisa</h2>
+				<p>Ao final da autoavaliação será gerado um documento com o resultado da mesma. Este documento é de conhecimento e posse dos responsáveis da instituição que estiverem realizando a autoavaliação e não será arquivado no programa acessado para a realização da pesquisa.  É recomendado que esses responsáveis salvem em arquivos próprios e confidenciais da Instituição. Qualquer divulgação desses resultados será de inteira responsabilidade dos participantes e responsáveis que tiverem acesso a eles (conforme aceito nos termos de uso apresentados no início deste instrumento digital).</p>
+				
+				<div class="aviso">
+					<p>Ao final do exercício, encaminhar o documento gerado com os resultados da autoavaliação para o e-mail da CAES/ABEM: <a href="mailto:secretaria@abem-educmed.org.br">secretaria@abem-educmed.org.br</a>, o que possibilitará a análise dos resultados recebidos com a caracterização da tipologia da escola (tradicional, inovadora com tendência tradicional, inovadora com tendência avançada, avançada) e a visualização crítica do conjunto de justificativas e evidência.</p>
+					<p>Esta análise  será devolvida à escola por meio de um relatório contendo comentários, sugestões e recomendações, havendo após esta etapa a possibilidade da escola receber assessoria da CAES/ABEM para o esclarecimento de dúvidas.</p>
+				</div>
+
+				<p style="text-align: center;"><button class="botao grande" onclick="location.href='avaliacao.html';">iniciar autoavalaiação</button></p>
+
+			</div>
+		</div>
+
 	</article>
 	
 </main>
 
-
+<div class="grafismo" aria-hidden="true"><img src="assets/media/blob_bg2.svg"></div>
 
 
 
