inicio formatacao formaulario

--- a/apresentacao.html
+++ b/apresentacao.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Avaliação de Tendências de Mudanças em Escolas Médicas</title>
+	<title>Avaliação de Tendências de Mudanças em Escolas da Área da Saúde</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -14,7 +14,7 @@
 
 		<h1 class="marca">
 			<span class="n01">Avaliação de Tendências</span> 
-			<span class="n02">de mudanças em <strong>escolas médicas</strong></span>
+			<span class="n02">de mudanças em <strong>escolas da área da saúde</strong></span>
 		</h1>
 
 
@@ -29,7 +29,7 @@
 			<div>
 				<h2>Apresentação do método</h2>
 				<p>Olá! Este é o instrumento de autoavaliação institucional denominado <strong>Método da Roda</strong> desenvolvido pela pesquisadora  Jadete Lampert a partir de sua tese de doutorado (Lampert,  2002). Por meio dele são avaliados cinco eixos conceituais  referentes ao ensino na área da saúde, com seus respectivos  desdobramentos: Mundo do Trabalho, Projeto Pedagógico,  Abordagem Pedagógica, Cenários de Prática e Desenvolvimento Docente.</p>
-				<p>O Método da Roda é utilizado pela Comissão de Avaliação de  Escolas da Área da Saúde (CAES) da Associação Brasileira de  Educação Médica (ABEM) para autoavaliação em cursos de  graduação da área da saúde (Lampert, 2009; Lampert, Costa &  Alves, 2016). Este instrumento revela o diagnóstico  quali-quantitativo institucional num determinado momento,  identiﬁcando a tipologia das escolas médicas em Tradicional, Inovadora ou Avançada frente ao que preconizam as Diretrizes  Curriculares Nacionais (DCN).</p>
+				<p>O Método da Roda é utilizado pela Comissão de Avaliação de  Escolas da Área da Saúde (CAES) da Associação Brasileira de  Educação Médica (ABEM) para autoavaliação em cursos de  graduação da área da saúde (Lampert, 2009; Lampert, Costa &  Alves, 2016). Este instrumento revela o diagnóstico  quali-quantitativo institucional num determinado momento,  identiﬁcando a tipologia das escolas da área da saúde em Tradicional,  Inovadora ou Avançada frente ao que preconizam as Diretrizes  Curriculares Nacionais (DCN).</p>
 			</div>
 
 			<div>
@@ -44,7 +44,7 @@
 			<p>A avaliação de cursos visa analisar e melhorar programas educacionais, e tem se tornado cada vez mais importante na área da saúde no Brasil, devido ao crescimento do número de instituições que formam profissionais e a responsabilidade que a instituição formadora tem frente às necessidades da sociedade (Bolela & Castro, 2014). </p>
 			<p>Desde a década de 1990, foi alavancado um processo de avaliação de escolas médicas com o movimento promovido pela Comissão Interinstitucional Nacional de Avaliação de Escolas Médicas (CINAEM) e, nos anos 2000, por meio da Comissão de Avaliação das Escolas Médicas (CAEM) – posteriormente renomeada como Comissão de Avaliação de Escolas da Área da Saúde (CAES), ambas vinculadas à Associação Brasileira de Educação Médica (ABEM) (Abdala, Stella, Perim, Aguilar, Lampert & Costa, 2009).</p>
 			<p>O estímulo dado por esses processos avaliativos culminou no desenvolvimento das Diretrizes Curriculares Nacionais (DCN) do curso de graduação em medicina publicadas em 2001 e reestruturadas em 2014 formalizando o direcionamento para a reforma  do ensino médico e assim, do ensino nas demais áreas da saúde (Brasil, 2014).</p>
-			<p>Em suma, as DCN apontam para uma formação generalista, humanista, crítica e reflexiva, contribuindo para a estruturação de um profissional capacitado a atuar, pautado em princípios éticos, promotor da saúde integral do ser humano.</p>
+			<p>Em suma, as DCN apontam para uma formação generalista, humanista, crítica e reflexiva, contribuindo para a formação de um profissional capacitado a atuar, pautado em princípios éticos, promotor da saúde integral do ser humano.</p>
 			<p>Portanto, este processo de autoavaliação intenciona revelar as tendências de mudanças em escolas da área da saúde rumo a efetivação das DCN e, acima de tudo, é uma oportunidade coletiva para reflexões e tomada de decisões (Moreira & Pereira, 2012).</p>
 		</div>
 
@@ -82,7 +82,7 @@
 							<p><strong>Evidências:</strong> exemplos de situações que caracterizam mudanças – documentos, ações – passíveis de averiguação e constatação que confirmem a opção escolhida como predominante nas práticas da escola. </p>
 						</div>
 					</li>
-					<li><p><strong>Resultado quali-quantitativo da autoavaliação</strong>: será apresentado em figura de uma roda indicando se a escola possui tendência tradicional, inovadora com tendência tradicional, inovadora com tendência avançada ou avançada.</p></li>
+					<li><p><strong>Resultado quali-quantitativo da autoavaliação</strong>: será apresentado na figura de uma roda indicando se a escola possui tendência tradicional, inovadora com tendência tradicional, inovadora com tendência avançada ou avançada.</p></li>
 				</ol>
 			</div>
 
@@ -95,7 +95,7 @@
 					<p>Esta análise  será devolvida à escola por meio de um relatório contendo comentários, sugestões e recomendações, havendo após esta etapa a possibilidade da escola receber assessoria da CAES/ABEM para o esclarecimento de dúvidas.</p>
 				</div>
 
-				<p style="text-align: center;"><button class="botao grande" onclick="location.href='avaliacao.html';">iniciar autoavalaiação</button></p>
+				<p style="text-align: center;"><button class="botao grande" onclick="location.href='avaliacao.html';">iniciar autoavaliação</button></p>
 
 			</div>
 		</div>
