--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Avaliação de Tendências de Mudanças em Escolas Médicas</title>
+	<title>Avaliação de Tendências de Mudanças em Escolas da Área da Saúde</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -11,7 +11,7 @@
 	<section id="portal">
 		<h1 class="marca">
 			<span class="n01">Avaliação de Tendências</span> 
-			<span class="n02">de mudanças em <strong>escolas médicas</strong></span>
+			<span class="n02">de mudanças em <strong>escolas da área da saúde</strong></span>
 		</h1>
 
 		<button class="botao grande" onclick="location.href='apresentacao.html';">começar</button>
@@ -47,13 +47,13 @@
 				<dd>Eliane Consuelo Alves Rabelo <button class="nota" aria-label="Acessar caixa de informação" data-nota="3"></button></dd>
 
 				<dt>Orientação</dt>
-				<dd>Nilce Maria da Silva Campos Costa <button class="nota" aria-label="Acessar caixa de informação" data-nota="4"></button></dd>
+				<dd>Dra. Nilce Maria da Silva Campos Costa <button class="nota" aria-label="Acessar caixa de informação" data-nota="4"></button></dd>
 
 				<dt>Co-orientação</dt>
 				<dd>Dra. Edna Regina Silva Pereira <button class="nota" aria-label="Acessar caixa de informação" data-nota="5"></button></dd>
 
 				<dt>Autoria do Instrumento da Roda e co-orientação </dt>
-				<dd>Jadete Barbosa Lampert <button class="nota" aria-label="Acessar caixa de informação" data-nota="6"></button></dd>
+				<dd>Dra. Jadete Barbosa Lampert <button class="nota" aria-label="Acessar caixa de informação" data-nota="6"></button></dd>
 
 				<dt>Associação Brasileira de Educação Médica – ABEM</dt>
 				<dd>CNPJ: 29.212.628/0001-32 <br>
@@ -136,11 +136,51 @@
 <div class="modal" data-nota="1" aria-hidden="true" aria-label="Caixa de informação 1" aria-describedby="explicaNota" role="dialog">
     <div role="document">
     	<h2>Dra. Maria Goretti Queiroz</h2>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore maxime est, eum facere laborum dolorum ea natus nisi dicta fuga veritatis autem itaque fugit, ullam vero ducimus, aliquam, recusandae iste?</p>
-
+    	<p>Possui graduação em Odontologia pela Universidade Federal de Goiás (1982), mestrado m Educação Escolar Brasileira pela Universidade Federal de Goiás (1997) e Doutorado em Educação pela Universidade Federal de Goiás (2006). Atualmente é professor adjunto IV da Universidade Federal de Goiás e coordenadora do PPGES</p>
     	<button class="fechar_nota" title="Fechar"><span aria-hidden="true">&times;</span></button>
     </div>
 </div>
+
+<div class="modal" data-nota="2" aria-hidden="true" aria-label="Caixa de informação 2" aria-describedby="explicaNota" role="dialog">
+    <div role="document">
+    	<h2>Dra. Edna Regina Silva Pereira</h2>
+    	<p>Graduação em Medicina pela Universidade Federal do Maranhão (1987) e doutorado em Medicina Nefrologia pela Universidade de São Paulo (2000). Pós Doutorado em Educação Médica pela Universidade de Campinas (UNICAMP) em 2013. Professora Titular do Departamento de Clínica Médica da Universidade Federal de Goiás</p>
+    	<button class="fechar_nota" title="Fechar"><span aria-hidden="true">&times;</span></button>
+    </div>
+</div>
+
+<div class="modal" data-nota="3" aria-hidden="true" aria-label="Caixa de informação 2" aria-describedby="explicaNota" role="dialog">
+    <div role="document">
+    	<h2>Eliane Consuelo Alves Rabelo</h2>
+    	<p>Graduada em Medicina pela UFG, Residência Médica em Clínica Médica pelo Santa Casa de Misericórdia de Goiânia, Residência Médica em Pneumologia pelo Hospital Annis Rassi, Mestranda do Programa de Pós-Graduação em Ensino na Saúde da Faculdade de Medicina da Universidade Federal de Goiás</p>
+    	<button class="fechar_nota" title="Fechar"><span aria-hidden="true">&times;</span></button>
+    </div>
+</div>
+
+<div class="modal" data-nota="4" aria-hidden="true" aria-label="Caixa de informação 2" aria-describedby="explicaNota" role="dialog">
+    <div role="document">
+    	<h2>Dra. Nilce Maria da Silva Campos Costa</h2>
+    	<p>Graduação em Nutrição pela Universidade Federal de Goiás, Mestrado em Educação pela Universidade Federal de Goiás (1996) e Doutorado em Educação (Currículo) pela Pontifícia Universidade Católica de São Paulo (2005). Professora Titular da Faculdade de Nutrição da Universidade Federal de Goiás. Docente do Programa de Mestrado e Doutorado em Ciências da Saúde da Faculdade de Medicina e do Programa de Mestrado Profissional em Ensino na Saúde da UFG.</p>
+    	<button class="fechar_nota" title="Fechar"><span aria-hidden="true">&times;</span></button>
+    </div>
+</div>
+
+<div class="modal" data-nota="5" aria-hidden="true" aria-label="Caixa de informação 2" aria-describedby="explicaNota" role="dialog">
+    <div role="document">
+    	<h2>Dra. Edna Regina Silva Pereira</h2>
+    	<p>Graduação em Medicina pela Universidade Federal do Maranhão (1987) e doutorado em Medicina Nefrologia pela Universidade de São Paulo (2000). Pós Doutorado em Educação Médica pela Universidade de Campinas (UNICAMP) em 2013. Vice coordenadora do PPGES. Professora Titular do Departamento de Clínica Médica da Universidade Federal de Goiás</p>
+    	<button class="fechar_nota" title="Fechar"><span aria-hidden="true">&times;</span></button>
+    </div>
+</div>
+
+<div class="modal" data-nota="6" aria-hidden="true" aria-label="Caixa de informação 2" aria-describedby="explicaNota" role="dialog">
+    <div role="document">
+    	<h2>Dra. Jadete Barbosa Lampert</h2>
+    	<p>Graduação em Medicina pela Universidade Federal de Santa Maria (1972), mestrado em Administração pela Fundação Getúlio Vargas - RJ (1989) e doutorado em Saúde Pública pela Fundação Oswaldo Cruz (2002), Coordena a Comissão de Avaliação das Escolas Médicas da ABEM com desenvolvimento, desde 2006, de Projeto de Avaliação de tendências de mudanças nos cursos de graduação da área da saúde. Docente contratada, desde 2009, pela Universidade de Santa Cruz do Sul, na área de apóio pedagógico aos docente.</p>
+    	<button class="fechar_nota" title="Fechar"><span aria-hidden="true">&times;</span></button>
+    </div>
+</div>
+
 
 <div id="explicaNota">Caixa de informação. Aperte ESC para sair ou clique no botão Fechar.</div>
 <div class="modalOverlay" tabindex="-1"></div>	
