Finalizado + correção da professora

--- a/apresentacao.html
+++ b/apresentacao.html
@@ -93,6 +93,7 @@
 				<div class="aviso">
 					<p>Ao final do exercício, encaminhar o documento gerado com os resultados da autoavaliação para o e-mail da CAES/ABEM: <a href="mailto:secretaria@abem-educmed.org.br">secretaria@abem-educmed.org.br</a>, o que possibilitará a análise dos resultados recebidos com a caracterização da tipologia da escola (tradicional, inovadora com tendência tradicional, inovadora com tendência avançada, avançada) e a visualização crítica do conjunto de justificativas e evidência.</p>
 					<p>Esta análise  será devolvida à escola por meio de um relatório contendo comentários, sugestões e recomendações, havendo após esta etapa a possibilidade da escola receber assessoria da CAES/ABEM para o esclarecimento de dúvidas.</p>
+					<p>Recomenda-se o uso do navegador <a href="https://www.google.com/chrome/" target="blank">Google Chrome</a> para realizar essa avaliação. </p>
 				</div>
 
 				<p style="text-align: center;"><button class="botao grande" onclick="location.href='avaliacao.html';">iniciar autoavaliação</button></p>
